[package]
name = "github-user-repos-status"
description = "Create a github page with the status of all of the user's repositories"
version = "0.1.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/ogle"
repository = "https://github.com/lpenz/ogle"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["display"] }
futures = "0.3.31"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "tracing-log"] }
url = "2.5.7"
